Adding README and final touchs. Recorded video and team sample file now included.

--- a/Develop/templates/main.html
+++ b/Develop/templates/main.html
@@ -21,12 +21,8 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card-deck">
-                    {{ team }}
-                </div>
-            </div>
+        <div class="team-area row col-12 d-flex justify-content-center">
+            {{ team }}
         </div>
     </div>
 </body>
